--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.cinemachine": "2.6.9",
     "com.unity.collab-proxy": "1.7.1",
+    "com.unity.device-simulator": "3.0.1-preview",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
